# aiegis

./: .gitignore  Dockerfile  README.md  pyproject.toml
.eventloom/: aiegis-default.jsonl  default.jsonl
.github/workflows/: ci.yml
benchmarks/: run.py
benchmarks/corpus/: document-text.txt  email-multipart.eml  html-large.html  html-small.html  memory-poisoning.txt  output-secret.txt
deploy/: docker-compose.yml
docs/: benchmarks.html  deployment-runbook.md  index.html  production-readiness.md  security-assumptions.md  site.css
docs/assets/benchmarks/: baseline-2026-05-18.json
docs/superpowers/plans/: 2026-05-17-aiegis-core-harness.md  2026-05-18-github-pages-site.md
examples/: policies.yaml
scripts/: release-check.sh
src/aiegis/: __init__.py  approval.py  audit.py  audit_integrity.py  browser_sandbox.py  cli.py  document_guard.py  egress_guard.py  email_guard.py  eventloom_sink.py  html_guard.py  input_limits.py  jsonl_audit_sink.py  mcp_proxy.py  mcp_server.py  mcp_stdio_proxy.py  memory_guard.py  models.py  policy.py  policy_profiles.py  prompt_signals.py  tool_firewall.py
tests/: test_approval.py  test_audit.py  test_benchmarks.py  test_browser_sandbox.py  test_cli.py  test_document_guard.py  test_egress_guard.py  test_email_guard.py  test_eventloom_sink.py  test_github_pages_site.py  test_html_guard.py  test_jsonl_audit_sink.py  test_mcp_proxy.py  test_mcp_server.py  test_mcp_stdio_proxy.py  test_memory_guard.py  test_models.py  test_policy.py  test_policy_profiles.py  test_redteam_corpus.py  test_release_artifacts.py  test_tool_firewall.py
(+6 files in other folders)
