[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "aiegis"
version = "0.1.0"
description = "A security harness for AI agents that labels, sanitizes, gates, and audits untrusted context."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "AIegis Contributors" }
]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "html5lib>=1.1",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "twine>=5.1",
]

[project.scripts]
aiegis = "aiegis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aiegis"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["aiegis"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["src"]
